[gd_scene load_steps=15 format=3 uid="uid://rkxxljuf1bh5"]

[ext_resource type="Script" uid="uid://c6kck7pwtsgyt" path="res://game/scenes/save_select.gd" id="1_76yte"]
[ext_resource type="PackedScene" uid="uid://dq45r84k0k6e2" path="res://core/game_objects/other/floor/floor.tscn" id="1_slww4"]
[ext_resource type="FontFile" uid="uid://cesouak3176ok" path="res://core/misc_assets/resources/Univers_Condensed_Regular.ttf" id="1_sttm1"]

[sub_resource type="Gradient" id="Gradient_sttm1"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0.14, 0.6, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_slww4"]
gradient = SubResource("Gradient_sttm1")

[sub_resource type="LabelSettings" id="LabelSettings_76yte"]
font = ExtResource("1_sttm1")
font_size = 128
outline_size = 12
outline_color = Color(0.51, 0.51, 0.51, 1)

[sub_resource type="Animation" id="Animation_noapy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rhg1r"]
resource_name = "new_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.501961), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_shk33"]
_data = {
&"RESET": SubResource("Animation_noapy"),
&"new_animation": SubResource("Animation_rhg1r")
}

[sub_resource type="Animation" id="Animation_76yte"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-160, -80)]
}

[sub_resource type="Animation" id="Animation_slww4"]
resource_name = "new_animation"
length = 2.0
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-160, -80), Vector2(-1.52588e-05, -7.62939e-06)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rhg1r"]
_data = {
&"RESET": SubResource("Animation_76yte"),
&"new_animation": SubResource("Animation_slww4")
}

[sub_resource type="LabelSettings" id="LabelSettings_slww4"]
font = ExtResource("1_sttm1")
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rhg1r"]
font = ExtResource("1_sttm1")
font_size = 48
font_color = Color(1, 0, 0, 1)
outline_size = 10
outline_color = Color(0.42, 0, 0, 1)

[node name="SaveSelect" type="Node2D"]
script = ExtResource("1_76yte")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -128
position = Vector2(640, 360)
scale = Vector2(5, 720)
texture = SubResource("GradientTexture1D_slww4")

[node name="Label" type="Label" parent="."]
offset_top = 80.0
offset_right = 1280.0
offset_bottom = 240.0
text = "TWHG Remake Template"
label_settings = SubResource("LabelSettings_76yte")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flash" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flash"]
libraries = {
&"": SubResource("AnimationLibrary_shk33")
}
autoplay = "new_animation"

[node name="Floor" parent="." instance=ExtResource("1_slww4")]
offset_left = -160.0
offset_top = -80.0
offset_right = -124.0
offset_bottom = -60.0
scale = Vector2(40, 40)
mouse_filter = 2
color_1 = Color(0, 0, 0, 0.172549)
color_2 = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Floor"]
libraries = {
&"": SubResource("AnimationLibrary_rhg1r")
}
autoplay = "new_animation"

[node name="Save1" type="Button" parent="."]
offset_left = 80.0
offset_top = 320.0
offset_right = 400.0
offset_bottom = 400.0
flat = true

[node name="Label" type="Label" parent="Save1"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 80.0
text = "SAVE 1"
label_settings = SubResource("LabelSettings_slww4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Save1"]
z_index = -8
offset_right = 320.0
offset_bottom = 80.0
mouse_filter = 2

[node name="Save2" type="Button" parent="."]
offset_left = 480.0
offset_top = 320.0
offset_right = 800.0
offset_bottom = 400.0
flat = true

[node name="Label" type="Label" parent="Save2"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 80.0
text = "SAVE 2"
label_settings = SubResource("LabelSettings_slww4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="Save2"]
z_index = -8
offset_right = 320.0
offset_bottom = 80.0
mouse_filter = 2

[node name="Save3" type="Button" parent="."]
offset_left = 880.0
offset_top = 320.0
offset_right = 1200.0
offset_bottom = 400.0
flat = true

[node name="Label" type="Label" parent="Save3"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 80.0
text = "SAVE 3"
label_settings = SubResource("LabelSettings_slww4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="Save3"]
z_index = -8
offset_right = 320.0
offset_bottom = 80.0
mouse_filter = 2

[node name="Reset1" type="Button" parent="."]
offset_left = 160.0
offset_top = 440.0
offset_right = 320.0
offset_bottom = 520.0
flat = true

[node name="Label" type="Label" parent="Reset1"]
layout_mode = 0
offset_left = -80.0
offset_right = 240.0
offset_bottom = 80.0
text = "Reset"
label_settings = SubResource("LabelSettings_slww4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Reset1"]
z_index = -8
layout_mode = 0
offset_right = 160.0
offset_bottom = 80.0
mouse_filter = 2
color = Color(1, 0.57, 0.57, 1)

[node name="Reset2" type="Button" parent="."]
offset_left = 560.0
offset_top = 440.0
offset_right = 720.0
offset_bottom = 520.0
flat = true

[node name="Label" type="Label" parent="Reset2"]
layout_mode = 0
offset_left = -80.0
offset_right = 240.0
offset_bottom = 80.0
text = "Reset"
label_settings = SubResource("LabelSettings_slww4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Reset2"]
z_index = -8
layout_mode = 0
offset_right = 160.0
offset_bottom = 80.0
mouse_filter = 2
color = Color(1, 0.57, 0.57, 1)

[node name="Reset3" type="Button" parent="."]
offset_left = 960.0
offset_top = 440.0
offset_right = 1120.0
offset_bottom = 520.0
flat = true

[node name="Label" type="Label" parent="Reset3"]
layout_mode = 0
offset_left = -80.0
offset_right = 240.0
offset_bottom = 80.0
text = "Reset"
label_settings = SubResource("LabelSettings_slww4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Reset3"]
z_index = -8
layout_mode = 0
offset_right = 160.0
offset_bottom = 80.0
mouse_filter = 2
color = Color(1, 0.57, 0.57, 1)

[node name="Exit" type="Button" parent="."]
offset_right = 80.0
offset_bottom = 60.0
flat = true

[node name="Label" type="Label" parent="Exit"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 60.0
text = "Exit"
label_settings = SubResource("LabelSettings_rhg1r")
horizontal_alignment = 1

[connection signal="pressed" from="Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="Save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="Save3" to="." method="_on_save_3_pressed"]
[connection signal="pressed" from="Reset1" to="." method="_on_reset_1_pressed"]
[connection signal="pressed" from="Reset2" to="." method="_on_reset_2_pressed"]
[connection signal="pressed" from="Reset3" to="." method="_on_reset_3_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
